--- a/rs/.project
+++ b/rs/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>rs</name>
+	<name>miniProject</name>
 	<comment></comment>
 	<projects>
 	</projects>
